--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -23,14 +23,18 @@
     }
 
     &__subtitle {
-      margin: 1px;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22px;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 25px;
     }
 
     &__contact {
-      //   background-color: red;
       display: inline-block;
       width: 100%;
-      margin: 40px auto;
+      margin: 35px auto 55px;
       &__pack {
         margin: 4px;
         display: inline-block;
@@ -56,11 +60,123 @@
   }
 
   &__form {
-    &__text {
-      font-size: 11px;
-      font-weight: 600;
-      line-height: 14.98px;
-      letter-spacing: 3.28px;
+    display: block;
+    position: relative;
+
+    &__pack {
+      &__text {
+        width: 100%;
+        color: $color-primary;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 14.98px;
+        letter-spacing: 3.28px;
+      }
+
+      input {
+        // background-color: red;
+        width: 312px;
+        height: 40px;
+        margin-bottom: 20px;
+        display: block;
+        width: 312px;
+        border: none;
+        border-bottom: 2px solid #cfd0d1;
+      }
+    }
+
+    &__terms {
+      width: 100%;
+      display: inline-block;
+      position: relative;
+      direction: ltr;
+
+      // &__checkbox {
+      //   display: none;
+      //   // cursor: pointer;
+      //   // appearance: none;
+      //   // border-radius: 4px;
+      //   // transition: all 0.2s;
+
+      //   // &:checked {
+      //   //   border: 1px solid #95989a;
+      //   //   // background-color: #fff;
+
+      //   //   &::after {
+      //   //     accent-color: solid green;
+      //   //     border: 1px solid #95989a;
+      //   //     // background-color: #fff;
+      //   //   }
+      //   // }
+      // }
+
+      // &__custom {
+      //   cursor: pointer;
+      //   border-radius: 4px;
+      //   transition: all 0.2s;
+      //   font-size: 34;
+      //   height: 24px;
+      //   width: 24px;
+      //   border: 1px solid #95989a;
+      //   border-radius: 3px;
+      //   position: relative;
+      //   background-color: #fff;
+      //   display: inline-block;
+
+      //   &::after {
+      //     content: '';
+      //     display: none;
+      //     position: absolute;
+      //     top: 50%;
+      //     left:50%;
+      //     width: 24px;
+      //     height: 24px;
+      //     background-color: url('check.png') no-repeat center center;
+      //     background-size: contain;
+      //     transform: translate(-50%, -50%);
+      //   }
+      // }
+
+      &__checkbox {
+        appearance: none;
+        border: 1px solid #95989A;
+        border-radius: 3px;
+        height: 24px;
+        width: 24px;
+        font-size: 34;
+        position:relative
+      }
+
+      &__checkbox:checked {
+        background: no-repeat;
+        background-image: url('../images/check.png');
+        background-size: 20;
+        background-position: center;
+      }
+
+      &__text {
+        width: 90%;
+        font-family: Open Sans;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16.34px;
+        position: absolute;
+        left: 35px;
+        top: 0px;
+        color: #707070;
+      }
+
+      button {
+        position: absolute;
+        top: 180px;
+        left: 85px;
+        padding: 20px 100px;
+        background-color: $color-primary;
+        font-family: $font-secondary;
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 17.7px;
+      }
     }
   }
 }
