--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -2,7 +2,7 @@
 
 .section4 {
   display: inline-block;
-  padding: 20px 30px;
+  padding: 20px 30px 0px;
   width: 375px;
 
   p,
@@ -62,6 +62,7 @@
   &__form {
     display: block;
     position: relative;
+    height: auto;
 
     &__pack {
       &__text {
@@ -87,75 +88,31 @@
 
     &__terms {
       width: 100%;
+      height: 144;
       display: inline-block;
       position: relative;
       direction: ltr;
 
-      // &__checkbox {
-      //   display: none;
-      //   // cursor: pointer;
-      //   // appearance: none;
-      //   // border-radius: 4px;
-      //   // transition: all 0.2s;
-
-      //   // &:checked {
-      //   //   border: 1px solid #95989a;
-      //   //   // background-color: #fff;
-
-      //   //   &::after {
-      //   //     accent-color: solid green;
-      //   //     border: 1px solid #95989a;
-      //   //     // background-color: #fff;
-      //   //   }
-      //   // }
-      // }
-
-      // &__custom {
-      //   cursor: pointer;
-      //   border-radius: 4px;
-      //   transition: all 0.2s;
-      //   font-size: 34;
-      //   height: 24px;
-      //   width: 24px;
-      //   border: 1px solid #95989a;
-      //   border-radius: 3px;
-      //   position: relative;
-      //   background-color: #fff;
-      //   display: inline-block;
-
-      //   &::after {
-      //     content: '';
-      //     display: none;
-      //     position: absolute;
-      //     top: 50%;
-      //     left:50%;
-      //     width: 24px;
-      //     height: 24px;
-      //     background-color: url('check.png') no-repeat center center;
-      //     background-size: contain;
-      //     transform: translate(-50%, -50%);
-      //   }
-      // }
-
       &__checkbox {
         appearance: none;
-        border: 1px solid #95989A;
+        border: 1px solid #95989a;
         border-radius: 3px;
         height: 24px;
         width: 24px;
         font-size: 34;
-        position:relative
+        position: relative;
       }
 
       &__checkbox:checked {
         background: no-repeat;
-        background-image: url('../images/check.png');
+        background-image: url("../images/check.png");
         background-size: 20;
         background-position: center;
       }
 
       &__text {
         width: 90%;
+        height: 144;
         font-family: Open Sans;
         font-size: 12px;
         font-weight: 400;
@@ -170,7 +127,7 @@
         position: absolute;
         top: 180px;
         left: 85px;
-        padding: 20px 100px;
+        padding: 20px 100px ;
         background-color: $color-primary;
         font-family: $font-secondary;
         font-size: 13px;
