--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,6 +17,7 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
+  position: relative;
 
   h1,
   h2,
@@ -48,72 +49,81 @@ body {
     font-size: 32px;
     font-weight: 300;
     line-height: 37px;
-    text-align: left;
     color: $color-primary;
 
     display: inline-block;
-    margin-top: 17px;
-    margin-left: 25px;
+    margin: 17px 0px 0px 25px;
   }
 
   main {
-    margin-top: 375px;
-    display: inline;
+    margin-top: 15px;
+    display: block;
   }
 
-  // footer {
-  //   width: 100%;
-  //   height: 89px;
-  //   // position: fixed;
-  //   // bottom: 0;
+  footer {
+    width: 100%;
+    height: 89px;
+    box-shadow: 0px -5px 40px 5px #00000033;
+    position: relative;
+    margin: 260px 0px 0px;
 
-  //   .copyright {
-  //     width: 187px;
-  //     height: 15px;
-  //     top: 53px;
-  //     left: 17px;
-  //     font-family: $font-secondary;
-  //     font-size: 11px;
-  //     font-weight: 400;
-  //     line-height: 14.98px;
-  //     text-align: left;
+    .pack {
+      display: block;
+      width: 90%;
+      &__copyright {
+        width: 187px;
+        height: 15px;
+        font-family: $font-secondary;
+        font-size: 11px;
+        font-weight: 400;
+        line-height: 14.98px;
+        margin-left: 25px;
+        color: #a5a5a5;
+      }
+    }
+
+    .pack__logos{
+      position: absolute;
+      top: 25px;
+      left: 80%;
+      display: inline-block;
+    }
+  }
+
+  //   @media only screen and (min-width: 1000px) {
+  //     body {
+  //       max-width: 1626px;
+  //       height: 70px;
+
+  //       nav {
+  //         height: 70px;
+  //         width: 100%;
+
+  //         .nav-logo {
+  //           width: 206px;
+  //           height: 37px;
+
+  //           font-family: $font-primary;
+  //           font-size: 32px;
+  //           font-weight: 300;
+  //           line-height: 37px;
+  //           text-align: left;
+  //           color: $color-primary;
+
+  //           background-color: aqua;
+  //           display: inline-block;
+  //           margin-top: 17px;
+  //           margin-left: 25px;
+  //         }
+
+  //         .menu {
+  //           display: none;
+  //         }
+
+  //         ul {
+  //           display: inline-block;
+  //         }
+  //       }
+  //     }
   //   }
-  // }
-
-//   @media only screen and (min-width: 1000px) {
-//     body {
-//       max-width: 1626px;
-//       height: 70px;
-
-//       nav {
-//         height: 70px;
-//         width: 100%;
-
-//         .nav-logo {
-//           width: 206px;
-//           height: 37px;
-
-//           font-family: $font-primary;
-//           font-size: 32px;
-//           font-weight: 300;
-//           line-height: 37px;
-//           text-align: left;
-//           color: $color-primary;
-
-//           background-color: aqua;
-//           display: inline-block;
-//           margin-top: 17px;
-//           margin-left: 25px;
-//         }
-
-//         .menu {
-//           display: none;
-//         }
-
-//         ul {
-//           display: inline-block;
-//         }
-//       }
-//     }
-//   }
 }
