--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -15,12 +15,29 @@ nav {
   .rectangle-menu {
     width: 20px;
     height: 2px;
-
     display: block;
     margin-bottom: 3px;
   }
 
   ul {
     display: none;
+  }
+
+}
+
+@media only screen and (min-width: 980px) {
+  nav {
+    background-color: rgb(163, 146, 146);
+    height: 70px;
+    width: 100%;
+
+    .menu {
+      display: none;
+    }
+
+    ul {
+      display: inline-block;
+      
+    }
   }
 }
