view mobile finished

--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -25,19 +25,19 @@ nav {
 
 }
 
-@media only screen and (min-width: 980px) {
-  nav {
-    background-color: rgb(163, 146, 146);
-    height: 70px;
-    width: 100%;
+// @media only screen and (min-width: 980px) {
+//   nav {
+//     background-color: rgb(163, 146, 146);
+//     height: 70px;
+//     width: 100%;
 
-    .menu {
-      display: none;
-    }
+//     .menu {
+//       display: none;
+//     }
 
-    ul {
-      display: inline-block;
+//     ul {
+//       display: inline-block;
       
-    }
-  }
-}
+//     }
+//   }
+// }
