--- a/styles/index.scss
+++ b/styles/index.scss
@@ -92,13 +92,13 @@ body {
 
 }
 
-@media only screen and (min-width: 1000px) {
-  body {
-    background-color: greenyellow;
-    max-width: 1626px;
-    height: 70px;
+// @media only screen and (min-width: 1000px) {
+//   body {
+//     background-color: greenyellow;
+//     max-width: 1626px;
+//     height: 70px;
 
-    width: 1626px;
-    height: 4234px;
-  }
-}
+//     width: 1626px;
+//     height: 4234px;
+//   }
+// }
