remove heights and correct nav

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -7,10 +7,10 @@
     display: inline-block;
     position: relative;
     border-radius: 50%;
-    height: auto;
+    // // height: auto;
     width: auto;
     width: 63px;
-    height: 63px;
+    // // height: 63px;
   }
 
   .pink {
