--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,7 @@ header {
 
   h1 {
     width: 162px;
-    height: 41px;
+    // height: 41px;
     font-size: 35px;
     font-weight: 400;
     line-height: 41.09px;
@@ -15,7 +15,7 @@ header {
 
   p {
     width: 308px;
-    height: 57px;
+    // height: 57px;
     font-family: $font-secondary;
     font-size: 16px;
     font-weight: 400;
@@ -25,7 +25,7 @@ header {
 
   button {
     width: 310px;
-    height: 67px;
+    // height: 67px;
     box-shadow: 5px 10px 14px 0px #07ace64a;
     font-size: 16px;
     font-weight: 700;
@@ -41,7 +41,7 @@ header {
 
     .header-img {
       width: 100%;
-      height: 267px;
+      // height: 267px;
       display: block;
       object-fit: cover;
       margin: 0px auto;
