--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,12 +1,15 @@
 nav {
-  width: 375px;
-  height: 70px;
   box-shadow: 0px 3px 6px 0px $color-shadow;
+
+  h2 {
+    font-size: 32px;
+    font-weight: 300;
+    line-height: 32px;
+    padding-bottom: 17px;
+  }
 
   .menu {
     width: 20px;
-    height: 12px;
-
     display: inline-block;
     margin-bottom: 5px;
     margin-left: 95px;
@@ -14,7 +17,6 @@ nav {
 
   .rectangle-menu {
     width: 20px;
-    height: 2px;
     display: block;
     margin-bottom: 3px;
   }
@@ -22,13 +24,12 @@ nav {
   ul {
     display: none;
   }
-
 }
 
-// @media only screen and (min-width: 980px) {
+// @media (min-width: 1000px) {
 //   nav {
 //     background-color: rgb(163, 146, 146);
-//     height: 70px;
+//     // // height: 70px;
 //     width: 100%;
 
 //     .menu {
@@ -37,7 +38,7 @@ nav {
 
 //     ul {
 //       display: inline-block;
-      
+
 //     }
 //   }
 // }
