--- a/styles/_section1.scss
+++ b/styles/_section1.scss
@@ -19,11 +19,11 @@
     .container_icons {
       margin: 0 auto;
       width: 63px;
-      height: 63px;
+      // height: 63px;
       position: relative;
 
       .container_vectors {
-        height: 51px;
+        // height: 51px;
         width: 44.02px;
         top: 28px;
 
@@ -39,7 +39,7 @@
         }
 
         .eye1 {
-          height: 33px;
+          // height: 33px;
           top: 12px;
           left: 16px;
         }
@@ -48,12 +48,12 @@
           top: 15.5px;
           left: 33px;
           width: 25px;
-          height: 25px;
+          // height: 25px;
         }
 
         .eye3 {
           width: 12px;
-          height: 12px;
+          // height: 12px;
           top: 22.64px;
           left: 40px;
         }
@@ -61,7 +61,7 @@
         .box1 {
           left: 32px;
           width: 37px;
-          height: 3px;
+          // height: 3px;
           top: 2px;
         }
 
@@ -69,21 +69,21 @@
           top: 6px;
           left: 29px;
           width: 43.15px;
-          height: 3px;
+          // height: 3px;
         }
 
         .box3 {
           top: 10px;
           left: 26px;
           width: 48.17px;
-          height: 3px;
+          // height: 3px;
         }
 
         .box4 {
           top: 14px;
           left: 25px;
           width: 52px;
-          height: 36px;
+          // height: 36px;
         }
       }
     }
@@ -101,7 +101,7 @@
       line-height: 24px;
       letter-spacing: 5.960000038146973px;
       width: 117px;
-      height: 24px;
+      // height: 24px;
       color: black;
       margin: 15px auto;
     }
