--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -7,7 +7,7 @@
   @mixin __card {
     margin: 19px auto;
     width: 315px;
-    height: 370px;
+    // height: 370px;
     border-radius: 5px;
     display: inline-block;
   }
@@ -33,7 +33,7 @@
       text-align: left;
       font-family: $font-primary;
       width: 100%;
-      height: 72px;
+      // height: 72px;
     }
 
     &__text {
@@ -57,7 +57,7 @@
       &__rectangleMobile {
         position: absolute;
         width: 90.12px;
-        height: 90.12px;
+        // height: 90.12px;
         top: 15px;
       }
 
@@ -70,7 +70,7 @@
       &__pc {
         position: absolute;
         width: 192.76px;
-        height: 109.93px;
+        // height: 109.93px;
         top: 37.11px;
         left: 55.27px;
       }
@@ -78,7 +78,7 @@
       &__circleBlue {
         position: absolute;
         width: 131.88px;
-        height: 131.88px;
+        // height: 131.88px;
         top: 17px;
         left: 90px;
       }
@@ -86,7 +86,7 @@
       &__mobile {
         position: absolute;
         width: 160px;
-        height: 137px;
+        // height: 137px;
         top: 25.01px;
         left: 90px;
       }
@@ -103,7 +103,7 @@
 
     &__containerImg2 {
       @include containerImg;
-      height: 195px;
+      // height: 195px;
       border: 1px solid #e8e9ed;
 
       &__backgroundGreen {
