--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -16,7 +16,7 @@
     h1 {
       margin: 0;
       width: 280px;
-      height: 47px;
+      // height: 47px;
       font-size: 40px;
       font-weight: 400;
       line-height: 46.96px;
@@ -39,12 +39,12 @@
         margin: 4px;
         display: inline-block;
         position: relative;
-        height: 27px;
+        // height: 27px;
         width: 100%;
 
         &__icon {
           width: 20px;
-          height: 17px;
+          // height: 17px;
         }
 
         &__text {
@@ -53,7 +53,7 @@
           top: 0;
           width: 80%;
           left: 34.59px;
-          height: 27px;
+          // height: 27px;
         }
       }
     }
@@ -62,7 +62,7 @@
   &__form {
     display: block;
     position: relative;
-    height: auto;
+    // height: auto;
 
     &__pack {
       &__text {
@@ -77,7 +77,7 @@
       input {
         // background-color: red;
         width: 312px;
-        height: 40px;
+        // height: 40px;
         margin-bottom: 20px;
         display: block;
         width: 312px;
@@ -88,7 +88,7 @@
 
     &__terms {
       width: 100%;
-      height: 144;
+      // height: 144;
       display: inline-block;
       position: relative;
       direction: ltr;
@@ -97,7 +97,7 @@
         appearance: none;
         border: 1px solid #95989a;
         border-radius: 3px;
-        height: 24px;
+        // height: 24px;
         width: 24px;
         font-size: 34;
         position: relative;
@@ -112,7 +112,7 @@
 
       &__text {
         width: 90%;
-        height: 144;
+        // height: 144;
         font-family: Open Sans;
         font-size: 12px;
         font-weight: 400;
