--- a/styles/index.css
+++ b/styles/index.css
@@ -1,18 +1,20 @@
 nav {
-  width: 375px;
-  height: 70px;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2);
+}
+nav h2 {
+  font-size: 32px;
+  font-weight: 300;
+  line-height: 32px;
+  padding-bottom: 17px;
 }
 nav .menu {
   width: 20px;
-  height: 12px;
   display: inline-block;
   margin-bottom: 5px;
   margin-left: 95px;
 }
 nav .rectangle-menu {
   width: 20px;
-  height: 2px;
   display: block;
   margin-bottom: 3px;
 }
@@ -28,7 +30,6 @@ header {
 }
 header h1 {
   width: 162px;
-  height: 41px;
   font-size: 35px;
   font-weight: 400;
   line-height: 41.09px;
@@ -36,7 +37,6 @@ header h1 {
 }
 header p {
   width: 308px;
-  height: 57px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -45,7 +45,6 @@ header p {
 }
 header button {
   width: 310px;
-  height: 67px;
   box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
   font-size: 16px;
   font-weight: 700;
@@ -60,7 +59,6 @@ header .header-img-container {
 }
 header .header-img-container .header-img {
   width: 100%;
-  height: 267px;
   display: block;
   object-fit: cover;
   margin: 0px auto;
@@ -77,10 +75,8 @@ header .header-img-container .header-img {
   display: inline-block;
   position: relative;
   border-radius: 50%;
-  height: auto;
   width: auto;
   width: 63px;
-  height: 63px;
 }
 .card .pink, .section1 .card_section1 .pink {
   background-color: #eb476e;
@@ -136,11 +132,9 @@ header .header-img-container .header-img {
 .section1 .card_section1 .container_icons {
   margin: 0 auto;
   width: 63px;
-  height: 63px;
   position: relative;
 }
 .section1 .card_section1 .container_icons .container_vectors {
-  height: 51px;
   width: 44.02px;
   top: 28px;
 }
@@ -154,7 +148,6 @@ header .header-img-container .header-img {
   left: 0px;
 }
 .section1 .card_section1 .container_icons .container_vectors .eye1 {
-  height: 33px;
   top: 12px;
   left: 16px;
 }
@@ -162,37 +155,31 @@ header .header-img-container .header-img {
   top: 15.5px;
   left: 33px;
   width: 25px;
-  height: 25px;
 }
 .section1 .card_section1 .container_icons .container_vectors .eye3 {
   width: 12px;
-  height: 12px;
   top: 22.64px;
   left: 40px;
 }
 .section1 .card_section1 .container_icons .container_vectors .box1 {
   left: 32px;
   width: 37px;
-  height: 3px;
   top: 2px;
 }
 .section1 .card_section1 .container_icons .container_vectors .box2 {
   top: 6px;
   left: 29px;
   width: 43.15px;
-  height: 3px;
 }
 .section1 .card_section1 .container_icons .container_vectors .box3 {
   top: 10px;
   left: 26px;
   width: 48.17px;
-  height: 3px;
 }
 .section1 .card_section1 .container_icons .container_vectors .box4 {
   top: 14px;
   left: 25px;
   width: 52px;
-  height: 36px;
 }
 .section1 .card_section1 p {
   margin: 0px auto;
@@ -206,7 +193,6 @@ header .header-img-container .header-img {
   line-height: 24px;
   letter-spacing: 5.9600000381px;
   width: 117px;
-  height: 24px;
   color: black;
   margin: 15px auto;
 }
@@ -228,7 +214,6 @@ header .header-img-container .header-img {
 .section2__card1 {
   margin: 19px auto;
   width: 315px;
-  height: 370px;
   border-radius: 5px;
   display: inline-block;
   background-color: #fff;
@@ -242,7 +227,6 @@ header .header-img-container .header-img {
 .section2__card1__containerImg1__rectangleMobile {
   position: absolute;
   width: 90.12px;
-  height: 90.12px;
   top: 15px;
 }
 .section2__card1__containerImg1__rectanglePc {
@@ -251,21 +235,18 @@ header .header-img-container .header-img {
 .section2__card1__containerImg1__pc {
   position: absolute;
   width: 192.76px;
-  height: 109.93px;
   top: 37.11px;
   left: 55.27px;
 }
 .section2__card1__containerImg1__circleBlue {
   position: absolute;
   width: 131.88px;
-  height: 131.88px;
   top: 17px;
   left: 90px;
 }
 .section2__card1__containerImg1__mobile {
   position: absolute;
   width: 160px;
-  height: 137px;
   top: 25.01px;
   left: 90px;
 }
@@ -285,7 +266,6 @@ header .header-img-container .header-img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 100%;
-  height: 72px;
 }
 .section2__card1__containerText1__text {
   font-family: "Open Sans", sans-serif;
@@ -297,14 +277,12 @@ header .header-img-container .header-img {
 .section2__card2 {
   margin: 19px auto;
   width: 315px;
-  height: 370px;
   border-radius: 5px;
   display: inline-block;
 }
 .section2__card2__containerImg2 {
   margin: 0 auto;
   position: relative;
-  height: 195px;
   border: 1px solid #e8e9ed;
 }
 .section2__card2__containerImg2__backgroundGreen {
@@ -341,7 +319,6 @@ header .header-img-container .header-img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 100%;
-  height: 72px;
 }
 .section2__card2__containerText2__text {
   font-family: "Open Sans", sans-serif;
@@ -367,10 +344,8 @@ header .header-img-container .header-img {
   display: inline-block;
   position: relative;
   border-radius: 50%;
-  height: auto;
   width: auto;
   width: 63px;
-  height: 63px;
 }
 .card .pink, .section1 .card_section1 .pink {
   background-color: #eb476e;
@@ -419,11 +394,9 @@ header .header-img-container .header-img {
   font-size: 36px;
   font-weight: 400;
   line-height: 42.26px;
-  height: 42px;
 }
 .section3__card3 {
   width: 293px;
-  height: 251px;
   border-radius: 18px;
   display: inline-block;
   margin: 5px auto 55px;
@@ -493,10 +466,8 @@ header .header-img-container .header-img {
   width: 38%;
   margin: 0 auto;
   padding: 70px 0;
-  height: 251px;
 }
 .section3__card3__containerPrice__basic {
-  height: 20px;
   margin: 0 auto;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
@@ -505,7 +476,6 @@ header .header-img-container .header-img {
 }
 .section3__card3__containerPrice__price {
   width: 59;
-  height: 60px;
   padding-top: 0px;
   font-family: "Open Sans", sans-serif;
   font-size: 46px;
@@ -515,7 +485,6 @@ header .header-img-container .header-img {
 }
 .section3__card3__containerPrice__subtitle {
   width: 74px;
-  height: 14px;
   margin: 0 auto;
   font-family: "Raleway", sans-serif;
   font-size: 12px;
@@ -525,7 +494,6 @@ header .header-img-container .header-img {
 }
 .section3__card3__containerFeature {
   display: inline-block;
-  height: 248px;
   width: 40%;
   position: absolute;
   left: 185px;
@@ -534,14 +502,12 @@ header .header-img-container .header-img {
 }
 .section3__card3__containerFeature__input {
   width: 10%;
-  height: 90%;
   display: block;
   position: absolute;
   padding-top: 12px;
 }
 .section3__card3__containerFeature__input__checkbox {
   width: 11px;
-  height: 11px;
   margin: 0px auto 23px;
 }
 .section3__card3__containerFeature__text {
@@ -553,7 +519,6 @@ header .header-img-container .header-img {
 }
 .section3__card3__containerFeature__text__title {
   width: 115px;
-  height: 19px;
   left: 21px;
   margin: 0 5px 19px;
   font-family: "Open Sans", sans-serif;
@@ -586,7 +551,6 @@ header .header-img-container .header-img {
 .section4__header h1 {
   margin: 0;
   width: 280px;
-  height: 47px;
   font-size: 40px;
   font-weight: 400;
   line-height: 46.96px;
@@ -608,12 +572,10 @@ header .header-img-container .header-img {
   margin: 4px;
   display: inline-block;
   position: relative;
-  height: 27px;
   width: 100%;
 }
 .section4__header__contact__pack__icon {
   width: 20px;
-  height: 17px;
 }
 .section4__header__contact__pack__text {
   color: #a5a5a5;
@@ -621,12 +583,10 @@ header .header-img-container .header-img {
   top: 0;
   width: 80%;
   left: 34.59px;
-  height: 27px;
 }
 .section4__form {
   display: block;
   position: relative;
-  height: auto;
 }
 .section4__form__pack__text {
   width: 100%;
@@ -638,7 +598,6 @@ header .header-img-container .header-img {
 }
 .section4__form__pack input {
   width: 312px;
-  height: 40px;
   margin-bottom: 20px;
   display: block;
   width: 312px;
@@ -647,7 +606,6 @@ header .header-img-container .header-img {
 }
 .section4__form__terms {
   width: 100%;
-  height: 144;
   display: inline-block;
   position: relative;
   direction: ltr;
@@ -656,7 +614,6 @@ header .header-img-container .header-img {
   appearance: none;
   border: 1px solid #95989a;
   border-radius: 3px;
-  height: 24px;
   width: 24px;
   font-size: 34;
   position: relative;
@@ -669,7 +626,6 @@ header .header-img-container .header-img {
 }
 .section4__form__terms__text {
   width: 90%;
-  height: 144;
   font-family: Open Sans;
   font-size: 12px;
   font-weight: 400;
@@ -706,12 +662,7 @@ body {
 body h1,
 body h2,
 body h3 {
-  text-align: center;
   font-family: "Raleway", sans-serif;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 42.26px;
-  margin-bottom: 30px;
   width: 100%;
 }
 body button {
@@ -725,7 +676,6 @@ body button {
 }
 body .logo_Oxygen {
   width: 206px;
-  height: 37px;
   font-family: "Raleway", sans-serif;
   font-size: 32px;
   font-weight: 300;
@@ -740,10 +690,10 @@ body main {
 }
 body footer {
   width: 100%;
-  height: 89px;
   box-shadow: 0px -5px 40px 5px rgba(0, 0, 0, 0.2);
   position: relative;
   margin: 260px 0px 0px;
+  padding: 45px auto 50px;
 }
 body footer .pack {
   display: block;
@@ -751,7 +701,6 @@ body footer .pack {
 }
 body footer .pack__copyright {
   width: 187px;
-  height: 15px;
   font-family: "Open Sans", sans-serif;
   font-size: 11px;
   font-weight: 400;
