--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,12 +22,7 @@ body {
   h1,
   h2,
   h3 {
-    text-align: center;
     font-family: $font-primary;
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 42.26px;
-    margin-bottom: 30px;
     width: 100%;
   }
 
@@ -43,7 +38,7 @@ body {
 
   .logo_Oxygen {
     width: 206px;
-    height: 37px;
+    // height: 37px;
 
     font-family: $font-primary;
     font-size: 32px;
@@ -62,17 +57,18 @@ body {
 
   footer {
     width: 100%;
-    height: 89px;
+    // // // height: 89px;
     box-shadow: 0px -5px 40px 5px #00000033;
     position: relative;
     margin: 260px 0px 0px;
+    padding: 45px auto 50px;
 
     .pack {
       display: block;
       width: 90%;
       &__copyright {
         width: 187px;
-        height: 15px;
+        // height: 15px;
         font-family: $font-secondary;
         font-size: 11px;
         font-weight: 400;
@@ -89,16 +85,13 @@ body {
       display: inline-block;
     }
   }
-
 }
 
-// @media only screen and (min-width: 1000px) {
+// @media (min-width: 1000px) {
 //   body {
 //     background-color: greenyellow;
 //     max-width: 1626px;
-//     height: 70px;
 
 //     width: 1626px;
-//     height: 4234px;
 //   }
 // }
