--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,6 @@
 nav {
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2);
 }
-nav h2 {
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 32px;
-  padding-bottom: 17px;
-}
 nav .menu {
   width: 20px;
   display: inline-block;
@@ -44,11 +38,11 @@ header p {
   margin: 0 auto 7px;
 }
 header button {
-  width: 310px;
   box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
   font-size: 16px;
   font-weight: 700;
   margin: 20px auto 25px;
+  padding: 22px 90px;
   background-color: #08a6e4;
 }
 header .header-img-container {
@@ -59,6 +53,7 @@ header .header-img-container {
 }
 header .header-img-container .header-img {
   width: 100%;
+  height: 267px;
   display: block;
   object-fit: cover;
   margin: 0px auto;
@@ -682,7 +677,8 @@ body .logo_Oxygen {
   line-height: 37px;
   color: #08a6e4;
   display: inline-block;
-  margin: 17px 0px 0px 25px;
+  margin: 17px auto 17px 25px;
+  padding: 30px auto;
 }
 body main {
   margin-top: 15px;
